# CAaOCoRBSvIEM

./: CMakeLists.txt  README.md  billiards.contact  billiards_input.dmat  example.cpp  example.json  input.dmat  sim.contact  sim.dmat  sim.uinfo
include/: CompressionEngine.h  Compressor.h  Decompressor.h  Quadratic.h  RotationInterpolation.h
src/: CompressionEngine.h  Compressor.cpp  Compressor.h  Decompressor.cpp  Quadratic.cpp  Quadratic.h  RotationInterpolation.cpp  RotationInterpolation.h
